[package]
name = "rusdhcp"
version = "0.1.0"
authors = ["spectrex02 <iscale821@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.33.0"
pnet = "0.25.0"
byteorder = "1.3.4"
log = "0.4.8"
failure = "0.1.7"
ipnetwork = "0.9.0"
yaml-rust = "0.4"
